<resources>
    <string name="app_name">Solis</string>
    <string name="common_back">Back</string>
    <string name="common_settings">Settings</string>
    <string name="common_copied">Copied!</string>
    <string name="common_try_again">Try Again</string>
    <string name="common_yes">Yes</string>
    <string name="error_modal_default_title">There was a problem</string>
    <string name="error_message_generic">Looks like something went wrong. Please try again.</string>
    <string name="error_message_fetching_transactions">There was a problem fetching this transaction</string>
    <string name="error_message_fetching_account">There was a problem fetching this account</string>
    <string name="error_message_fetching_saved_account">There was a problem fetching your saved accounts</string>
    <string name="error_message_fetching_transfer_request">There was a problem interpreting this transfer request</string>
    <string name="error_message_fetching_transaction_request">There was a problem interpreting this transaction request</string>
    <string name="key_display_system_program">System Program</string>
    <string name="key_display_config_program">Config Program</string>
    <string name="key_display_ed25519_program">Ed25519 Program</string>
    <string name="key_display_secp256k1_program">Secp256k1 Program</string>
    <string name="key_display_stake_program">Stake Program</string>
    <string name="key_display_vote_program">Vote Program</string>
    <string name="key_display_memo_program">Memo Program</string>
    <string name="key_display_token_program">Token Program</string>
    <string name="key_display_bpf_loader_program">BPF Loader Program</string>
    <string name="key_display_native_loader_program">Native Loader Program</string>
    <string name="screen_title_home">Solis Inspector</string>
    <string name="home_search_hint">Search for address or transaction</string>
    <string name="home_content_description_qr_scanner">Scan SolPay QR code</string>
    <string name="screen_title_app_settings">Settings</string>
    <string name="screen_title_qr_scanner">Scan QR Code</string>
    <string name="home_search_result_category_header_transactions">Transactions</string>
    <string name="home_search_result_category_header_programs">Programs</string>
    <string name="home_search_result_category_header_accounts">Accounts</string>
    <string name="home_search_result_category_header_clipboard">From your clipboard</string>
    <string name="home_search_result_display_prefix_account">Account: %1$s</string>
    <string name="home_search_result_display_prefix_transaction">Transaction: %1$s</string>
    <string name="home_saved_accounts_title">Saved Accounts</string>
    <string name="account_details_bottomsheet_title_account">Account</string>
    <string name="account_details_bottomsheet_title_program">Program</string>
    <string name="transaction_details_bottomsheet_title">Transaction</string>
    <string name="transaction_details_title_description">Summary</string>
    <string name="transaction_details_title_signature">Signature</string>
    <string name="transaction_details_title_time">Time</string>
    <string name="transaction_details_title_type">Type</string>
    <string name="transaction_details_title_source">Source</string>
    <string name="transaction_details_title_fee">Fee</string>
    <string name="transaction_details_title_fee_payer">Fee Payer</string>
    <string name="transaction_details_title_slot">Slot</string>
    <string name="transaction_type_unknown">Unknown</string>
    <string name="transaction_type_nft_bid">NFT bid</string>
    <string name="transaction_type_nft_bid_cancelled">NFT bid cancelled</string>
    <string name="transaction_type_nft_listing">NFT listing</string>
    <string name="transaction_type_nft_cancel_listing">NFT cancel listing</string>
    <string name="transaction_type_nft_sale">NFT sale</string>
    <string name="transaction_type_nft_mint">NFT mint</string>
    <string name="transaction_type_nft_auction_created">NFT auction created</string>
    <string name="transaction_type_nft_auction_updated">NFT auction updated</string>
    <string name="transaction_type_nft_auction_cancelled">NFT auction cancelled</string>
    <string name="transaction_type_nft_participation_reward">NFT participation reward</string>
    <string name="transaction_type_nft_mint_rejected">NFT mint rejected</string>
    <string name="transaction_type_create_store">Create store</string>
    <string name="transaction_type_whitelist_creator">Whitelist creator</string>
    <string name="transaction_type_add_to_whitelist">Add to whitelist</string>
    <string name="transaction_type_remove_from_whitelist">Remove from whitelist</string>
    <string name="transaction_type_auction_manager_claim_bid">Auction manager claim bid</string>
    <string name="transaction_type_empty_payment_account">Empty payment account</string>
    <string name="transaction_type_update_primary_sale_metadata">Update primary sale metadata</string>
    <string name="transaction_type_add_token_to_vault">Add token to vault</string>
    <string name="transaction_type_activate_vault">Activate vault</string>
    <string name="transaction_type_init_vault">Init vault</string>
    <string name="transaction_type_init_bank">Init bank</string>
    <string name="transaction_type_init_stake">Init stake</string>
    <string name="transaction_type_merge_stake">Merge stake</string>
    <string name="transaction_type_split_stake">Split stake</string>
    <string name="transaction_type_set_bank_flags">Set bank flags</string>
    <string name="transaction_type_set_vault_lock">Set vault lock</string>
    <string name="transaction_type_update_vault_owner">Update vault owner</string>
    <string name="transaction_type_update_bank_manager">Update bank manager</string>
    <string name="transaction_type_record_rarity_points">Record rarity points</string>
    <string name="transaction_type_add_rarities_to_bank">Add rarities to bank</string>
    <string name="transaction_type_init_farm">Init farm</string>
    <string name="transaction_type_init_farmer">Init farmer</string>
    <string name="transaction_type_refresh_farmer">Refresh farmer</string>
    <string name="transaction_type_update_farm">Update farm</string>
    <string name="transaction_type_authorize_funder">Authorize funder</string>
    <string name="transaction_type_deauthorize_funder">Deauthorize funder</string>
    <string name="transaction_type_fund_reward">Fund reward</string>
    <string name="transaction_type_cancel_reward">Cancel reward</string>
    <string name="transaction_type_lock_reward">Lock reward</string>
    <string name="transaction_type_payout">Payout</string>
    <string name="transaction_type_validate_safety_deposit_box_v2">Validate safety deposit box v2</string>
    <string name="transaction_type_set_authority">Set authority</string>
    <string name="transaction_type_init_auction_manager_v2">Init auction manager v2</string>
    <string name="transaction_type_update_external_price_account">Update external price account</string>
    <string name="transaction_type_auction_house_create">Auction house create</string>
    <string name="transaction_type_close_escrow_account">Close escrow account</string>
    <string name="transaction_type_withdraw">Withdraw</string>
    <string name="transaction_type_deposit">Deposit</string>
    <string name="transaction_type_transfer">Transfer</string>
    <string name="transaction_type_burn">Burn</string>
    <string name="transaction_type_burn_nft">Burn NFT</string>
    <string name="transaction_type_platform_fee">Platform fee</string>
    <string name="transaction_type_loan">Loan</string>
    <string name="transaction_type_repay_loan">Repay loan</string>
    <string name="transaction_type_add_to_pool">Add to pool</string>
    <string name="transaction_type_remove_from_pool">Remove from pool</string>
    <string name="transaction_type_close_position">Close position</string>
    <string name="transaction_type_unlabeled">Unlabeled</string>
    <string name="transaction_type_close_account">Close account</string>
    <string name="transaction_type_withdraw_gem">Withdraw gem</string>
    <string name="transaction_type_deposit_gem">Deposit gem</string>
    <string name="transaction_type_stake_token">Stake token</string>
    <string name="transaction_type_unstake_token">Unstake token</string>
    <string name="transaction_type_stake_sol">Stake sol</string>
    <string name="transaction_type_unstake_sol">Unstake sol</string>
    <string name="transaction_type_claim_rewards">Claim rewards</string>
    <string name="transaction_type_buy_subscription">Buy subscription</string>
    <string name="transaction_type_swap">Swap</string>
    <string name="transaction_type_init_swap">Init swap</string>
    <string name="transaction_type_cancel_swap">Cancel swap</string>
    <string name="transaction_type_reject_swap">Reject swap</string>
    <string name="transaction_type_initialize_account">Initialize account</string>
    <string name="transaction_type_token_mint">Token mint</string>
    <string name="transaction_source_form_function">Form function</string>
    <string name="transaction_source_exchange_art">Exchange art</string>
    <string name="transaction_source_candy_machine_v2">Candy machine v2</string>
    <string name="transaction_source_candy_machine_v1">Candy machine v1</string>
    <string name="transaction_source_unknown">Unknown</string>
    <string name="transaction_source_solanart">Solanart</string>
    <string name="transaction_source_solsea">Solsea</string>
    <string name="transaction_source_magic_eden">Magic eden</string>
    <string name="transaction_source_holaplex">Holaplex</string>
    <string name="transaction_source_metaplex">Metaplex</string>
    <string name="transaction_source_opensea">Opensea</string>
    <string name="transaction_source_solana_program_library">Solana program library</string>
    <string name="transaction_source_anchor">Anchor</string>
    <string name="transaction_source_w_sol">W sol</string>
    <string name="transaction_source_phantom">Phantom</string>
    <string name="transaction_source_system_program">System program</string>
    <string name="transaction_source_stake_program">Stake program</string>
    <string name="transaction_source_coinbase">Coinbase</string>
    <string name="transaction_source_coral_cube">Coral cube</string>
    <string name="transaction_source_hedge">Hedge</string>
    <string name="transaction_source_launch_my_nft">Launch my NFT</string>
    <string name="transaction_source_gem_bank">Gem bank</string>
    <string name="transaction_source_gem_farm">Gem farm</string>
    <string name="transaction_source_degods">Degods</string>
    <string name="transaction_source_blocksmith_labs">Blocksmith labs</string>
    <string name="transaction_source_yawww">Yawww</string>
    <string name="transaction_source_atadia">Atadia</string>
    <string name="transaction_source_solport">Solport</string>
    <string name="transaction_source_hyperspace">Hyperspace</string>
    <string name="transaction_source_digital_eyes">Digital eyes</string>
    <string name="transaction_source_tensor">Tensor</string>
    <string name="transaction_source_bifrost">Bifrost</string>
    <string name="home_saved_accounts_empty_message">You have no saved accounts.\n\nSearch to get started!</string>
    <string name="home_no_notification_permission_prompt">We can\'t send you notifications without permission. Tap here to receive push notifications about your saved accounts</string>
    <string name="qr_scanner_page_explainer">You can scan a SolPay-compatible QR code, or a QR code with a Solana public key</string>
    <string name="qr_scanner_permission_explanation">We\'ll need to use the phone camera to scan a QR.\n\nTap below to grant permission.</string>
    <string name="qr_scanner_grant_permission_link">Grant Permission</string>
</resources>