<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/SolisToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="@string/screen_title_qr_scanner" />

    <TextView
        android:id="@+id/page_instructions"
        style="@style/TextAppearance.PageInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr_scanner_page_explainer"
        app:layout_constraintBottom_toTopOf="@id/barcode_scanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.journeyapps.barcodescanner.DecoratedBarcodeView
        android:id="@+id/barcode_scanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_large"
        android:visibility="invisible"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_instructions"
        app:zxing_preview_scaling_strategy="centerCrop" />

    <LinearLayout
        android:id="@+id/permission_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/barcode_scanner">

        <TextView
            style="@style/TextAppearance.PageInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qr_scanner_permission_explanation" />

        <TextView
            android:id="@+id/grant_permission"
            style="@style/TextAppearance.Link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qr_scanner_grant_permission_link" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>