<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        style="@style/SolisAppBarLayout">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            style="@style/SolisCollapsingToolbarLayout">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/SolisToolbar.Collapsable"
                app:title="@string/screen_title_home">

                <ImageView
                    android:id="@+id/settings"
                    style="@style/SolisToolbarItem"
                    android:layout_gravity="end|center_vertical"
                    android:contentDescription="@string/common_settings"
                    android:src="@drawable/ic_baseline_more_vert_24" />
            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <LinearLayout
            android:id="@+id/search_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_large"
            android:layout_marginVertical="@dimen/padding_small"
            android:addStatesFromChildren="true"
            android:background="@drawable/solis_search_input_field_background"
            android:clipChildren="false"
            android:gravity="center_vertical"
            android:minHeight="?actionBarSize"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padding_small">

            <EditText
                android:id="@+id/search_input_field"
                style="@style/SolisSearchInputField"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/home_search_hint"
                android:importantForAutofill="no"
                android:inputType="none" />

            <ImageView
                android:id="@+id/qr_scanner"
                android:layout_width="@dimen/clickable_element_min_height"
                android:layout_height="@dimen/clickable_element_min_height"
                android:background="?selectableItemBackground"
                android:contentDescription="@string/home_content_description_qr_scanner"
                android:padding="@dimen/padding_small"
                android:src="@drawable/ic_baseline_qr_code_scanner_24"
                app:tint="?android:attr/textColorSecondary" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingTop="@dimen/padding_small"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_small">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/search_results_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_large"
                android:layout_marginBottom="@dimen/padding_large"
                android:visibility="gone"
                app:cardBackgroundColor="?colorOnPrimary"
                app:cardElevation="4dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:id="@+id/search_results_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/notification_permission_prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_large"
                android:layout_marginBottom="@dimen/padding_large"
                android:foreground="?selectableItemBackground"
                android:visibility="gone"
                app:cardBackgroundColor="?colorPrimary"
                app:cardElevation="4dp"
                app:strokeWidth="0dp">

                <TextView
                    style="@style/TextAppearance.Solis.Label2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/padding_default"
                    android:padding="@dimen/padding_default"
                    android:text="@string/home_no_notification_permission_prompt"
                    android:textColor="?colorOnPrimary"
                    app:drawableStartCompat="@drawable/ic_baseline_notification_important_24"
                    app:drawableTint="?colorOnPrimary" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?colorOnPrimary"
                android:elevation="16dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <LinearLayout
                android:id="@+id/empty_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?colorOnPrimary"
                android:elevation="16dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/padding_large"
                android:visibility="gone">

                <TextView
                    android:id="@+id/empty_message"
                    style="@style/TextAppearance.Solis.Label4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_default"
                    android:gravity="center"
                    android:text="@string/home_saved_accounts_empty_message" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/error_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_large"
                android:visibility="gone">

                <TextView
                    android:id="@+id/error_message"
                    style="@style/TextAppearance.Solis.Label4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/try_again_button"
                    style="@style/TextAppearance.Link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_small"
                    android:gravity="center"
                    android:text="@string/common_try_again" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/loading_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding_default"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>